// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PowerBlock should render correctly 1`] = `
<div>
  <div
    class="panel"
  >
    <span
      class="title"
    >
      strength
    </span>
    <div>
      MockUnitInput
      <p>
        id: 
        power
      </p>
      <p>
        min: 
        1
      </p>
      <p>
        max: 
        100
      </p>
      <p>
        unit: 
        %
      </p>
      <p>
        defaultValue: 
        87
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        displayMultiValue: 
      </p>
    </div>
    <input
      id="power_value"
      max="100"
      min="1"
      step="1"
      type="range"
      value="87"
    />
  </div>
</div>
`;

exports[`test PowerBlock should render correctly whe power is low 1`] = `
<div>
  <div
    class="panel"
  >
    <span
      class="title"
    >
      strength
    </span>
    <div>
      MockUnitInput
      <p>
        id: 
        power
      </p>
      <p>
        min: 
        1
      </p>
      <p>
        max: 
        100
      </p>
      <p>
        unit: 
        %
      </p>
      <p>
        defaultValue: 
        7
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        displayMultiValue: 
      </p>
    </div>
    <input
      id="power_value"
      max="100"
      min="1"
      step="1"
      type="range"
      value="7"
    />
    <div
      class="warning"
    >
      <div
        class="warning-icon"
      >
        !
      </div>
      <div
        class="warning-text"
      >
        low_power_warning
      </div>
    </div>
  </div>
</div>
`;
